# perf_counter

./: .gitignore  README.md  pyproject.toml
letter_counter/: counter.py  counter_rust.rs
tests/: test_counter.py
