[tool.poetry]
name = "letter-counter"
version = "0.1.0"
description = ""
authors = ["arsar7 <sargsyan_arman@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
counter = "letter_counter.counter:main"